Applying fix for hover event on iOS

--- a/public/sass/partials/_educations.scss
+++ b/public/sass/partials/_educations.scss
@@ -57,7 +57,6 @@
 }
 
 .card {
-    display: block;
     position: relative;
     user-select: none;
     -webkit-user-select: none;
